--- a/src/lib/modules/tree-cell/tree-cell.component.html
+++ b/src/lib/modules/tree-cell/tree-cell.component.html
@@ -1,3 +1,4 @@
-<p>
-  tree-cell works!
-</p>
+<div>
+  <i [ngClass]="configs.css.expand_class" class="expand-icon" aria-hidden="true" *ngIf="!row_data.leaf && index===0"></i>
+  <span>{{row_data[column.name]}}</span>
+</div>
