Capture expand event.

--- a/src/lib/angular-tree-view.component.html
+++ b/src/lib/angular-tree-view.component.html
@@ -14,6 +14,9 @@
         [expand_tracker]="expand_tracker"
         [data]="data"
         [columns]="columns"
-        [configs]="configs">        
+        [configs]="configs"
+        [cellclick]="cellclick"
+        [expand]="expand"
+    >        
     </tbody>
 </table>
