--- a/src/lib/modules/tree-body/tree-body.component.html
+++ b/src/lib/modules/tree-body/tree-body.component.html
@@ -5,6 +5,8 @@
       [column]="column"
       [index]="i"
       [row_data]="rec"
+      [cellclick]="cellclick"
+      (rowexpand)="onRowExpand($event)"
     >
     </db-tree-cell>
   </td>
