--- a/src/lib/modules/tree-cell/tree-cell.component.scss
+++ b/src/lib/modules/tree-cell/tree-cell.component.scss
@@ -29,3 +29,18 @@ i.plus {
         margin-left: 14px;
     }
 }
+
+i.minus {
+    border: 1px solid rgba(0, 0, 0, 0);
+
+    &:before {
+        content: '';  
+        width: 18px;
+        height: 1px;
+        border-top: 2px solid $icon-border-color;
+        display: block;
+        position: absolute;
+        margin-top: -15px;
+        margin-left: 6px;
+    }
+}
