Emit output on expand and collapse.

--- a/src/lib/angular-tree-view.component.html
+++ b/src/lib/angular-tree-view.component.html
@@ -17,6 +17,7 @@
         [configs]="configs"
         [cellclick]="cellclick"
         [expand]="expand"
+        [collapse]="collapse"
     >        
     </tbody>
 </table>
