--- a/src/lib/modules/tree-body/tree-body.component.scss
+++ b/src/lib/modules/tree-body/tree-body.component.scss
@@ -1,4 +1,4 @@
-@import '../../angular-tree-view.component.scss';
+@import '../../angular-tree-grid.component.scss';
 
 tr.child {
     background: #fff;
