--- a/src/lib/modules/tree-cell/tree-cell.component.scss
+++ b/src/lib/modules/tree-cell/tree-cell.component.scss
@@ -1,4 +1,4 @@
-@import '../../angular-tree-view.component.scss';
+@import '../../angular-tree-grid.component.scss';
 
 i.expand-icon {
     margin-right: 33px;
