--- a/src/lib/modules/tree-head/tree-head.component.html
+++ b/src/lib/modules/tree-head/tree-head.component.html
@@ -1,5 +1,5 @@
 <tr>
-  <th *ngFor="let column of columns">
-    {{column.header}}
+  <th *ngFor="let column of columns" [ngClass]="{'column-hide': column.hidden}">
+    <div>{{column.header}}</div>    
   </th>
 </tr>
