--- a/src/lib/modules/tree-head/tree-head.component.scss
+++ b/src/lib/modules/tree-head/tree-head.component.scss
@@ -18,6 +18,10 @@ tr {
         &.column-hide {
             display: none;
         }
+
+        &.header-editable {
+            width: 70px;
+        }
     }
 }
 
