--- a/src/lib/angular-tree-grid.component.html
+++ b/src/lib/angular-tree-grid.component.html
@@ -3,6 +3,7 @@
         db-tree-head
         [processed_data]="processed_data"
         [expand_tracker]="expand_tracker"
+        [internal_configs]="internal_configs"
         [data]="data"
         [columns]="columns"
         [configs]="configs">
@@ -12,12 +13,15 @@
         db-tree-body
         [processed_data]="processed_data"
         [expand_tracker]="expand_tracker"
+        [edit_tracker]="edit_tracker"
+        [internal_configs]="internal_configs"
         [data]="data"
         [columns]="columns"
         [configs]="configs"
         [cellclick]="cellclick"
         [expand]="expand"
         [collapse]="collapse"
+        [rowdelete]="rowdelete"
     >        
     </tbody>
 </table>
