Complete row save feature.

--- a/src/lib/modules/tree-body/tree-body.component.html
+++ b/src/lib/modules/tree-body/tree-body.component.html
@@ -17,6 +17,7 @@
         [index]="i"
         [row_data]="rec"
         [expand_tracker]="expand_tracker"
+        [edit_on]="edit_tracker[rec[configs.id_field]]"
         [cellclick]="cellclick"
         (rowexpand)="onRowExpand($event)"
       >
