--- a/src/lib/angular-tree-grid.component.html
+++ b/src/lib/angular-tree-grid.component.html
@@ -22,6 +22,7 @@
         [expand]="expand"
         [collapse]="collapse"
         [rowdelete]="rowdelete"
+        [rowsave]="rowsave"
     >        
     </tbody>
 </table>
