Fix edit for id field.

--- a/src/lib/modules/tree-body/tree-body.component.html
+++ b/src/lib/modules/tree-body/tree-body.component.html
@@ -20,6 +20,7 @@
         [edit_on]="edit_tracker[rec[configs.id_field]]"
         [cellclick]="cellclick"
         (rowexpand)="onRowExpand($event)"
+        (editcomplete)="saveRecord($event)"
       >
       </db-tree-cell>
     </td>
