Complete edit parent feature.

--- a/src/lib/angular-tree-grid.component.html
+++ b/src/lib/angular-tree-grid.component.html
@@ -4,6 +4,7 @@
         [processed_data]="processed_data"
         [expand_tracker]="expand_tracker"
         [internal_configs]="internal_configs"
+        [edit_tracker]="edit_tracker"
         [data]="data"
         [columns]="columns"
         [configs]="configs">
