Complete Add feature.

--- a/src/lib/angular-tree-grid.component.html
+++ b/src/lib/angular-tree-grid.component.html
@@ -24,6 +24,7 @@
         [collapse]="collapse"
         [rowdelete]="rowdelete"
         [rowsave]="rowsave"
+        [rowadd]="rowadd"
     >        
     </tbody>
 </table>
