--- a/src/lib/modules/tree-head/tree-head.component.html
+++ b/src/lib/modules/tree-head/tree-head.component.html
@@ -7,7 +7,7 @@
   <th *ngFor="let column of columns" [ngClass]="{'column-hide': column.hidden}">
     <div>{{column.header}}</div>    
   </th>
-  <th *ngIf="internal_configs.show_parent_col">
+  <th *ngIf="internal_configs.show_parent_col || internal_configs.show_add_row">
     Parent
   </th>
 </tr>
