--- a/src/lib/modules/tree-head/tree-head.component.scss
+++ b/src/lib/modules/tree-head/tree-head.component.scss
@@ -22,6 +22,32 @@ tr {
         &.header-editable {
             width: 70px;
         }
+
+        i.plus {
+            border: 1px solid rgba(0, 0, 0, 0);
+        
+            &:before {
+                content: '';
+                width: 18px;
+                height: 1px;
+                border-top: 2px solid $icon-border-color;
+                display: block;
+                position: absolute;
+                margin-top: -15px;
+                margin-left: 6px;
+            }
+        
+            &:after {
+                content: '';
+                width: 1px;
+                height: 18px;
+                border-right: 2px solid $icon-border-color;
+                display: block;
+                position: absolute;
+                margin-top: -23px;
+                margin-left: 14px;
+            }
+        }
     }
 }
 
