--- a/src/lib/modules/tree-body/tree-body.component.html
+++ b/src/lib/modules/tree-body/tree-body.component.html
@@ -33,6 +33,7 @@
         [edit_on]="edit_tracker[row_data[configs.id_field]]"
         [cellclick]="cellclick"
         (rowexpand)="onRowExpand($event)"
+        (rowcollapse)="onRowCollapse($event)"
         (editcomplete)="saveRecord($event)"
       >
       </db-tree-cell>
