Implement row selection.

--- a/src/lib/angular-tree-grid.component.html
+++ b/src/lib/angular-tree-grid.component.html
@@ -25,6 +25,7 @@
         [rowdelete]="rowdelete"
         [rowsave]="rowsave"
         [rowadd]="rowadd"
+        [rowselect]="rowselect"
     >        
     </tbody>
 </table>
