Fix icon position.

--- a/src/lib/modules/tree-body/components/add-row/add-row.component.scss
+++ b/src/lib/modules/tree-body/components/add-row/add-row.component.scss
@@ -2,5 +2,11 @@
 
 svg {
     width: 25px;
-    padding-right: 5px;
+    padding-right: 4px;
+}
+
+div.icon-container {
+    display: inline-block;
+    width: 50%;
+    text-align: center;
 }
