--- a/src/lib/modules/tree-cell/components/tree-cell-actions/tree-cell-actions.component.scss
+++ b/src/lib/modules/tree-cell/components/tree-cell-actions/tree-cell-actions.component.scss
@@ -2,3 +2,9 @@ svg {
     width: 25px;
     padding-right: 5px;
 }
+
+div.icon-container {
+    display: inline-block;
+    width: 50%;
+    text-align: center;
+}
