Apply width to every column.

--- a/src/lib/modules/tree-head/tree-head.component.html
+++ b/src/lib/modules/tree-head/tree-head.component.html
@@ -1,10 +1,10 @@
-<tr>
+<tr [ngClass]="configs.css.header_class">
   <th *ngIf="configs.actions.add || configs.actions.edit || configs.actions.delete" class="action-header" 
     (click)="addRow()">
     <i *ngIf="!internal_configs.show_add_row && configs.actions.add" [ngClass]="configs.css.add_class" aria-hidden="true" title="Add a row"></i>
     <span *ngIf="internal_configs.show_add_row || !configs.actions.add">Actions</span>
   </th>
-  <th *ngFor="let column of columns" [ngClass]="{'column-hide': column.hidden}">
+  <th *ngFor="let column of columns" [ngClass]="{'column-hide': column.hidden}" [attr.width]="column.width">
     <div>{{column.header}}</div>    
   </th>
   <th *ngIf="internal_configs.show_parent_col || internal_configs.show_add_row">
