--- a/src/lib/angular-tree-grid.component.html
+++ b/src/lib/angular-tree-grid.component.html
@@ -1,22 +1,20 @@
 <table class="db-tree-view">
     <thead 
         db-tree-head
-        [processed_data]="processed_data"
+        [store]="store"
         [expand_tracker]="expand_tracker"
         [internal_configs]="internal_configs"
         [edit_tracker]="edit_tracker"
-        [data]="data"
         [columns]="columns"
         [configs]="configs">
     </thead>
 
     <tbody 
         db-tree-body
-        [processed_data]="processed_data"
+        [store]="store"
         [expand_tracker]="expand_tracker"
         [edit_tracker]="edit_tracker"
         [internal_configs]="internal_configs"
-        [data]="data"
         [columns]="columns"
         [configs]="configs"
         [cellclick]="cellclick"
