Complete filter feature.

--- a/src/lib/modules/tree-body/tree-body.component.html
+++ b/src/lib/modules/tree-body/tree-body.component.html
@@ -6,6 +6,7 @@
   [configs]="configs"
   [store]="store"
   *ngIf="configs.filter"
+  [expand_tracker]="expand_tracker"
   [ngClass]="configs.css.row_filter_class">
 </tr>
 <tr db-add-row 
