--- a/src/lib/modules/tree-body/components/filter-row/filter-row.component.html
+++ b/src/lib/modules/tree-body/components/filter-row/filter-row.component.html
@@ -1,6 +1,6 @@
 <td *ngIf="(configs.actions.edit || configs.actions.delete || configs.actions.add)"></td>
 <td *ngFor="let column of columns">
   <div *ngIf="column.filter">
-    <input type="text" (keydown.enter)="filter(column)">
+    <input type="text" (keyup)="filter(column)" [(ngModel)]="search_values[column.name]">
   </div>
 </td>
