--- a/src/lib/modules/tree-body/tree-body.component.html
+++ b/src/lib/modules/tree-body/tree-body.component.html
@@ -1,3 +1,4 @@
+<ng-container *ngIf="configs">
 <tr *ngIf="raw_data.length==0">
   <td [innerHTML]="configs.data_loading_text" [attr.colspan]="columns.length + 1" style="text-align: center"></td>
 </tr>
@@ -58,3 +59,4 @@
     </td>
   </ng-container>
 </tr>
+</ng-container>
