--- a/src/lib/modules/tree-body/tree-body.component.scss
+++ b/src/lib/modules/tree-body/tree-body.component.scss
@@ -23,6 +23,7 @@ tr {
         vertical-align: middle;
         position: relative;
         padding: 0.5rem 0.5rem;
+        box-sizing: border-box;
 
         &:nth-child(1) {
             padding: 0.3rem;
