Add Select All feature.

--- a/src/lib/modules/tree-body/components/add-row/add-row.component.html
+++ b/src/lib/modules/tree-body/components/add-row/add-row.component.html
@@ -1,3 +1,4 @@
+<td *ngIf="configs.multi_select"></td>
 <td>
   <div class="icon-container">
     <i (click)="saveAddRecord($event)" *ngIf="configs.css.save_class" title="Save row" class="{{this.configs.css.save_class}}" aria-hidden="true"></i>
