--- a/src/lib/modules/tree-head/tree-head.component.html
+++ b/src/lib/modules/tree-head/tree-head.component.html
@@ -1,5 +1,8 @@
 <ng-container *ngIf="configs">
 <tr [ngClass]="configs.css.header_class">
+  <th *ngIf="configs.multi_select">
+    <input type="checkbox" (click)="selectAll($event)" [checked]="this.internal_configs.all_selected">
+  </th>
   <th 
     *ngIf="configs.actions.add || configs.actions.edit || configs.actions.delete" 
     class="action-column"
