--- a/src/lib/modules/tree-body/components/filter-row/filter-row.component.html
+++ b/src/lib/modules/tree-body/components/filter-row/filter-row.component.html
@@ -1,6 +1,9 @@
+<td *ngIf="configs.multi_select"></td>
 <td *ngIf="(configs.actions.edit || configs.actions.delete || configs.actions.add)"></td>
 <td *ngFor="let column of columns">
   <div *ngIf="column.filter">
     <input type="text" (keyup)="filter()" [(ngModel)]="search_values[column.name]">
   </div>
 </td>
+<!-- Add column to fix UI issue when add row is enabled -->
+<td *ngIf="internal_configs.show_add_row"></td>
